--- a/resources/assignment-head.tex
+++ b/resources/assignment-head.tex
@@ -10,7 +10,7 @@
 \renewcommand{\headrulewidth}{0pt}
 \rfoot{{\footnotesize Copyright Mia Minnes, 2021, Version \today~(\thepage)}}
 
-\author{CSE20F21}
+\author{CSEXF22}
 
 \newcommand{\instructions}{{\bf For all HW assignments:}
 
